# i18n-sync

./: Cargo.toml  README.md
src/: cli.rs  extractor.rs  locale_manager.rs  main.rs
