[package]
name = "i18n-sync"
version = "0.1.0"
edition = "2024"
description = "A utility for syncing translation keys for rust_i18n"
authors = ["Vadim <rofeds12345@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["i18n", "localization", "translation", "rust_i18n", "sync"]
categories = ["command-line-utilities", "localization"]
repository = "https://github.com/bircoder432/i18n-sync"
documentation = "https://docs.rs/i18n-sync"
homepage = "https://github.com/bircoder432/i18n-sync"

[[bin]]
name = "i18n-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
